@@ -14,7 +14,7 @@
 <title>SNMP Trap Translator</title>
 </head>
 <body>
-<h1>SNMP Trap Translator v0.9.1</h1>
+<h1>SNMP Trap Translator v0.9.2</h1>
 <b>(<a href="http://www.snmptt.org">SNMPTT</a>)</b><br />
 This file was last updated on:&nbsp; June 11th, 2004
 <p><a href="#License">License</a></p>
@@ -263,11 +263,10 @@ or you enable the options <b>translate_integers</b>,
 <b>translate_trap_oid</b> or <b>translate_oids</b>.  Although not required, using the Perl 
 module is recommended.<br /></span></blockquote>
 <h2><a id="Whats-New" name="Whats-New"></a>What's New</h2>
-<h3><b>0.9.1</b> <b>- ??, 2004</b></h3>
+<h3><b>0.9.2</b> <b>- ??, 2004</b></h3>
 <ul>
   <li>Added <b>mysql_ping_interval</b> option to set how often the database will be 'pinged' to ensure the connection is available.  If an error is returned, it will attempt to reconnect to the database.  This should prevent SNMPTT from having to be restarted if the SQL server is not available due to an outage.</li>
-  <li>Added <b>escape_sequences_enable</b> option to <b>snmptt.ini</b> to enable the use of common escape sequences in FORMAT and EXEC lines 
-  such as <b>\n</b> <b>\t</b> etc</li>
+  <li>Added variable substitutions <b>$Fa</b>, <b>$Ff</b>, <b>$Fn</b>, <b>$Fr</b>, <b>$Ft</b>, for alarm (bell), form feed (FF), newline (LF, NL), return (CR) and tab (HT, TAB)</li>
   <li>Added variable substitution <b>$D</b> to dump the description text from the MIB file for FORMAT and EXEC lines.  Can be enabled or disabled using the <b>mib_descriptions_enable</b> <b>snmptt.ini</b> option.</li>
   <li>Fixed bug with MySQL 'gone away' errors when running SNMPTT as non-root due to connection being terminated when 
   the uid changed</li>
@@ -637,7 +636,7 @@ configuration files to load</li>
 <li>Initial release</li>
 </ul>
 <h2><a id="Upgrading" name="Upgrading"></a>Upgrading</h2>
-<h3><b>v0.9 to v0.9.1</b></h3>
+<h3><b>v0.9 to v0.9.2</b></h3>
 <p>To upgrade from v0.8 to v0.9, you should:</p>
 <ol>
 <li>Replace <span style="font-weight: bold;">snmptt</span> with the
@@ -1770,6 +1769,11 @@ $C - Trap community string<br />
 $D - Description text from MIB file <b>(see Note 6)</b><br />
 $E - Enterprise trap OID in symbolic format<br />
 $e&nbsp; - Enterprise trap OID in number format<br />
+$Fa&nbsp; - alarm (bell) (BEL)<br />
+$Ff&nbsp; - form feed (FF)<br />
+$Fn&nbsp; - newline (LF, NL)<br />
+$Fr&nbsp; - return (CR)<br />
+$Ft&nbsp; - tab (HT, TAB)<br />
 $G&nbsp; - Generic trap number (0 if enterprise trap)<br />
 $S&nbsp; - Specific trap number (0 if generic trap)<br />
 $N&nbsp; - Event name defined in .conf file of matched entry<br />
@@ -1806,11 +1810,6 @@ $+*&nbsp; - Expand all variable-bindings in the format of
 $-*&nbsp; - Expand all variable-bindings in the format of
 <i>variable name (variable type):value</i> <b>(see Note
   2,3</b><b>,5</b><b>)</b><br />
-\a&nbsp; - alarm (bell) (BEL) <b>(see Note 7)</b><br />
-\f&nbsp; - form feed (FF) <b>(see Note 7)</b><br />
-\n&nbsp; - newline (LF, NL) <b>(see Note 7)</b><br />
-\r&nbsp; - return (CR) <b>(see Note 7)</b><br />
-\t&nbsp; - tab (HT, TAB) <b>(see Note 7)</b><br />
 </blockquote>
 Example:
 <p>FORMAT NIC switchover to slot $3, port $4 from slot $5, port
@@ -1917,8 +1916,6 @@ installed for this to work and you must enable support for it by
 enabling <b>mib_descriptions_enable</b> in the <b>snmptt.ini</b> file.&nbsp;
 The description is pulled from the MIB file, <b>not</b> from the 
 <b>snmptt.conf</b> file.</blockquote>
-<p>Note (7):</p>
-<blockquote>The escape sequences must be enabled using the option <b>escape_sequences_enable</b> in <b>snmptt.ini</b>.</blockquote>
 </blockquote>
 <h3><a id="SNMPTT.CONF-EXEC" name=
 "SNMPTT.CONF-EXEC"></a><b>EXEC:</b></h3>
